@@ -45,6 +45,7 @@
             this.columnApp = ((System.Windows.Forms.ColumnHeader)(new System.Windows.Forms.ColumnHeader()));
             this.columnType = ((System.Windows.Forms.ColumnHeader)(new System.Windows.Forms.ColumnHeader()));
             this.columnDetails = ((System.Windows.Forms.ColumnHeader)(new System.Windows.Forms.ColumnHeader()));
+            this.columnLastModified = ((System.Windows.Forms.ColumnHeader)(new System.Windows.Forms.ColumnHeader()));
             this.IconList = new System.Windows.Forms.ImageList(this.components);
             this.label4 = new System.Windows.Forms.Label();
             this.tabPage2 = new System.Windows.Forms.TabPage();
@@ -199,7 +200,8 @@
             this.listApplications.Columns.AddRange(new System.Windows.Forms.ColumnHeader[] {
             this.columnApp,
             this.columnType,
-            this.columnDetails});
+            this.columnDetails,
+            this.columnLastModified});
             this.listApplications.FullRowSelect = true;
             this.listApplications.GridLines = true;
             this.listApplications.HideSelection = false;
@@ -228,6 +230,11 @@
             // 
             this.columnDetails.Tag = "colDetails";
             resources.ApplyResources(this.columnDetails, "columnDetails");
+            // 
+            // columnLastModified
+            // 
+            this.columnLastModified.Tag = "colLastModified";
+            resources.ApplyResources(this.columnLastModified, "columnLastModified");
             // 
             // IconList
             // 
@@ -649,5 +656,6 @@
         private System.Windows.Forms.CheckBox chkDisplayOffBlock;
         private System.Windows.Forms.TableLayoutPanel tableLayoutPanel1;
         private System.Windows.Forms.Button btnGithub;
+        private System.Windows.Forms.ColumnHeader columnLastModified;
     }
 }
